# FSM

./: CMakeLists.txt  FiniteStateMachine.h  readme.md  test.cpp
include/: BaseState.h
src/: FiniteStateMachine.cpp
